test colab commit

--- a/resources/DP0701EN-2-2-1-Foursquare-API-py-v1.0.ipynb
+++ b/resources/DP0701EN-2-2-1-Foursquare-API-py-v1.0.ipynb
@@ -68,7 +68,7 @@
         "colab_type": "text"
       },
       "source": [
-        "   "
+        "*Test commit from Colab*   "
       ]
     },
     {
