--- a/resources/DP0701EN-2-2-1-Foursquare-API-py-v1.0.ipynb
+++ b/resources/DP0701EN-2-2-1-Foursquare-API-py-v1.0.ipynb
@@ -22,7 +22,6 @@
     "colab": {
       "name": "DP0701EN-2-2-1-Foursquare-API-py-v1.0.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     }
   },
@@ -217,8 +216,8 @@
         "colab": {}
       },
       "source": [
-        "CLIENT_ID = 'your-client-ID' # your Foursquare ID\n",
-        "CLIENT_SECRET = 'your-client-secret' # your Foursquare Secret\n",
+        "CLIENT_ID = 'QEPQ03NLWD2WHE1ILZ5AUJA3JNSXEI2DJWJNKHOU133HORCY' # your Foursquare ID\n",
+        "CLIENT_SECRET = 'GEGJUS2TFG3DQOASUYQDUJTNWTTX2IMN5RNASS5LUOIU3YMY' # your Foursquare Secret\n",
         "VERSION = '20180604'\n",
         "LIMIT = 30\n",
         "print('Your credentails:')\n",
