--- a/200325_Segmenting_and_Clustering_Neighborhoods_in_Toronto.ipynb
+++ b/200325_Segmenting_and_Clustering_Neighborhoods_in_Toronto.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "200325 Segmenting and Clustering Neighborhoods in Toronto.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPyKOTdlvKHRj2kjnbsmqI5",
+      "authorship_tag": "ABX9TyNPSFiSaY6Mp2saQkGrpEqU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -342,7 +342,6 @@
         "# pd.set_option('display.max_columns', 5)\n",
         "# # pd.set_option('display.max_colwidth', 100)\n",
         "# print(df_out)\n",
-        "# print(\"\\nThe shape of output df is: \", df_out.shape)\n",
         "# pd.reset_option('all')\n"
       ],
       "execution_count": 0,
@@ -476,6 +475,32 @@
             "tags": []
           },
           "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZO38bqIOaKPp",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "a4d600af-cb2e-459b-f497-c7fc44c06067"
+      },
+      "source": [
+        "print(\"\\nThe shape of output df is: \", df_out.shape)"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "The shape of output df is:  (103, 3)\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
