--- a/Capstone_Project_The_Battle_of_Neighborhoods_(Week_2)_Report.ipynb
+++ b/Capstone_Project_The_Battle_of_Neighborhoods_(Week_2)_Report.ipynb
@@ -6,7 +6,7 @@
       "name": "Capstone Project - The Battle of Neighborhoods (Week 2) - Report.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOS3M4st0SH66lyKV1m3aBf",
+      "authorship_tag": "ABX9TyMOoe5+RDMiUX1DgkglU617",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +64,7 @@
       "source": [
         "Zurich is the biggest city in Switzerland with a population of 0.4 million in the municipality area. Despite its small population, Zurich is among the world's largest financial centers. Zurich is also one of cities with the highest quality of life according to various surveys. Over 30% of population in Zurich do not hold Swiss citizenship, making it one of the most international cities in the world.  \n",
         "\n",
-        "The city of Zurich is splitted into 34 neighborhoods (German: \"Quartier\") for adminstrative purposes. What characteristics do different neighborhoods have? Which neighhood should I go to if I want to hang out in bars or clubs? Which neighboods are similar, and in what way? The answers to these questions could help tourists decide how to explore the city; residents choose a neighborhood to live; and city planners make cecisions.  "
+        "The city of Zurich is splitted into 34 neighborhoods (German: \"Quartier\") for administrative purposes. What characteristics do different neighborhoods have? Which neighborhoods should I go to if I want to hang out in bars or clubs? Which neighborhoods are similar, and in what way? The answers to these questions could help tourists decide how to explore the city; residents choose a neighborhood to live; and city planners make decisions.  "
       ]
     },
     {
@@ -84,7 +84,7 @@
         "colab_type": "text"
       },
       "source": [
-        "We approach these problems in the following way. First of all, we collect data that charaterize neighborhoods. Then, we use exploratory analysis to gain some initial insights from the data. After that, we make cluster analysis on neighboods. Finally, we discuss our findings and propose next steps for this analysis.  "
+        "We approach these problems in the following way. First of all, we collect data that characterize neighborhoods. Then, we use exploratory analysis to gain some initial insights from the data. After that, we make cluster analysis on neighboods. Finally, we discuss our findings and propose next steps for this analysis.  "
       ]
     },
     {
@@ -162,6 +162,16 @@
         "Taking a closer look at restaurant gives us the distribution of restaurants per neighborhood.\n",
         "\n",
         "<img src='https://raw.githubusercontent.com/epflyingzhang/ibm_data_science_capstone/master/results/bar_chart.png' width=500>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cI3fIYetDC_P",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     },
     {
@@ -292,14 +302,14 @@
       "source": [
         "After exploring the location data, we gained a lot more insights about the city of Zurich. The city of Zurich consists of 34 neighborhoods. By looking at the amount of restaurants, cafés, arts and entertainment venues, tram and bus stops, bar and clubs, markets, and offices in each area, we understood the characteristics of different neighborhoods. Some neighborhoods offer more options for dining and drinking, some for museems and art galleries, and some are more concentrated with offices. Cluster analysis helped us group seemly geographically disconnected neighborhoods into different clusters. The culstering results give us five groups of neighborhoods based on similarity.  \n",
         "\n",
-        "A tourist can use the results of this analysis to plan his or her city visit. A residence who is about to move home can use the clusting results to help determine potential neighborhoods to consider. City planners and adminstrators can consider applying initiatives that are proven successful in one neighborhood to other neighborhoods in the same cluster. \n",
+        "A tourist can use the results of this analysis to plan his or her city visit. A residence who is about to move home can use the clustering results to help determine potential neighborhoods to consider. City planners and administrators can consider applying initiatives that are proven successful in one neighborhood to other neighborhoods in the same cluster. \n",
         "\n",
         "However, we need to acknowledge limitations in this study:\n",
         "- The choice of venue categories was limited to the accuracy and completeness of Foursquare data in Zurich. Crowd-sourced data might have smaller coverage for certain categories (e.g. offices) compared to others (e.g. restaurants). Using Google Map data might solve this issue.   \n",
         "\n",
-        "- We used abosulote number of venues as features in this analysis. Venue density with regards to area size or population of neighborhoods might describe better the 'feeling' of a disctrict. \n",
+        "- We used abosulote number of venues as features in this analysis. Venue density with regards to area size or population of neighborhoods might describe better the 'feeling' of a district. \n",
         "\n",
-        "- We limited our study to the official 34 adminstrative neighborhoods for simplicity. In fact, the analysis could be easily extended to much smaller grids or or blocks. "
+        "- We limited our study to the official 34 administrative neighborhoods for simplicity. In fact, the analysis could be easily extended to much smaller grids or or blocks. "
       ]
     },
     {
