--- a/Capstone_Project_The_Battle_of_Neighborhoods_(Week_2)_Report.ipynb
+++ b/Capstone_Project_The_Battle_of_Neighborhoods_(Week_2)_Report.ipynb
@@ -6,7 +6,7 @@
       "name": "Capstone Project - The Battle of Neighborhoods (Week 2) - Report.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMOoe5+RDMiUX1DgkglU617",
+      "authorship_tag": "ABX9TyOwAYgIFA61hJupaYKYMA6W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -149,7 +149,7 @@
       "source": [
         "We rearranged the data and used number of venues per group as feature for each neighborhood. We ended up with a 34*7 data frame.\n",
         "\n",
-        "<img src='https://raw.githubusercontent.com/epflyingzhang/ibm_data_science_capstone/master/results/df.png' width=500>"
+        "<img src='https://raw.githubusercontent.com/epflyingzhang/ibm_data_science_capstone/master/results/df.png' width=500 />"
       ]
     },
     {
