--- a/Capstone_Project_The_Battle_of_Neighborhoods_(Week_2)_Report.ipynb
+++ b/Capstone_Project_The_Battle_of_Neighborhoods_(Week_2)_Report.ipynb
@@ -6,7 +6,7 @@
       "name": "Capstone Project - The Battle of Neighborhoods (Week 2) - Report.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOwAYgIFA61hJupaYKYMA6W",
+      "authorship_tag": "ABX9TyNJXD4O292bqVYTOGTfbX5o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -149,7 +149,7 @@
       "source": [
         "We rearranged the data and used number of venues per group as feature for each neighborhood. We ended up with a 34*7 data frame.\n",
         "\n",
-        "<img src='https://raw.githubusercontent.com/epflyingzhang/ibm_data_science_capstone/master/results/df.png' width=500 />"
+        "<img src='https://raw.githubusercontent.com/epflyingzhang/ibm_data_science_capstone/master/results/df.png' width=\"500\" />"
       ]
     },
     {
@@ -161,7 +161,7 @@
       "source": [
         "Taking a closer look at restaurant gives us the distribution of restaurants per neighborhood.\n",
         "\n",
-        "<img src='https://raw.githubusercontent.com/epflyingzhang/ibm_data_science_capstone/master/results/bar_chart.png' width=500>"
+        "<img src='https://raw.githubusercontent.com/epflyingzhang/ibm_data_science_capstone/master/results/bar_chart.png' width=\"500\" />"
       ]
     },
     {
@@ -183,7 +183,7 @@
       "source": [
         "Box plot reveals outliers of neighborhoods with respect to each feature. \n",
         "\n",
-        "<img src='https://raw.githubusercontent.com/epflyingzhang/ibm_data_science_capstone/master/results/box.png' width=500>\n",
+        "<img src='https://raw.githubusercontent.com/epflyingzhang/ibm_data_science_capstone/master/results/box.png' width=\"500\" />\n",
         "\n",
         "\n",
         "We can see that:\n",
@@ -202,9 +202,9 @@
       "source": [
         "To investigate the correlation between different venue categories, we plotted the scatter plot matrix and correlation matrix.\n",
         "\n",
-        "<img src='https://raw.githubusercontent.com/epflyingzhang/ibm_data_science_capstone/master/results/scatter.png' width=1000>\n",
+        "<img src='https://raw.githubusercontent.com/epflyingzhang/ibm_data_science_capstone/master/results/scatter.png' width=\"1000\" />\n",
         "\n",
-        "<img src='https://raw.githubusercontent.com/epflyingzhang/ibm_data_science_capstone/master/results/heat.png' width=500>"
+        "<img src='https://raw.githubusercontent.com/epflyingzhang/ibm_data_science_capstone/master/results/heat.png' width=\"500\" />"
       ]
     },
     {
@@ -230,9 +230,9 @@
         "\n",
         "Then, we used Principal Component Analysis (PCA) to reduce dimensions and visualize the first and second principal components to see if any clusters are formed.\n",
         "\n",
-        "<img src=\"https://raw.githubusercontent.com/epflyingzhang/ibm_data_science_capstone/master/results/pca.png\" width=500>\n",
+        "<img src=\"https://raw.githubusercontent.com/epflyingzhang/ibm_data_science_capstone/master/results/pca.png\" width=\"500\" />\n",
         "\n",
-        "<img src=\"https://raw.githubusercontent.com/epflyingzhang/ibm_data_science_capstone/master/results/pca2.png\" width=500>"
+        "<img src=\"https://raw.githubusercontent.com/epflyingzhang/ibm_data_science_capstone/master/results/pca2.png\" width=\"500\" />"
       ]
     },
     {
