--- a/Capstone_Project_The_Battle_of_Neighborhoods_(Week_2)_Report.ipynb
+++ b/Capstone_Project_The_Battle_of_Neighborhoods_(Week_2)_Report.ipynb
@@ -6,7 +6,7 @@
       "name": "Capstone Project - The Battle of Neighborhoods (Week 2) - Report.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNJXD4O292bqVYTOGTfbX5o",
+      "authorship_tag": "ABX9TyOWU5apMaYPS7rsk52LyjEB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
         "colab_type": "text"
       },
       "source": [
-        "In this project, we analyze the neighborhoods in Zurich using  location data from Foursquare and explore insights that can be helpful for residents, tourists and city adminstrators. "
+        "In this project, we analyze the neighborhoods in Zurich using  location data from Foursquare and explore insights that can be helpful for residents, tourists and city administrators. "
       ]
     },
     {
@@ -64,7 +64,7 @@
       "source": [
         "Zurich is the biggest city in Switzerland with a population of 0.4 million in the municipality area. Despite its small population, Zurich is among the world's largest financial centers. Zurich is also one of cities with the highest quality of life according to various surveys. Over 30% of population in Zurich do not hold Swiss citizenship, making it one of the most international cities in the world.  \n",
         "\n",
-        "The city of Zurich is splitted into 34 neighborhoods (German: \"Quartier\") for administrative purposes. What characteristics do different neighborhoods have? Which neighborhoods should I go to if I want to hang out in bars or clubs? Which neighborhoods are similar, and in what way? The answers to these questions could help tourists decide how to explore the city; residents choose a neighborhood to live; and city planners make decisions.  "
+        "The city of Zurich is split into 34 neighborhoods (German: \"Quartier\") for administrative purposes. What characteristics do different neighborhoods have? Which neighborhoods should I go to if I want to hang out in bars or clubs? Which neighborhoods are similar, and in what way? The answers to these questions could help tourists decide how to explore the city; residents choose a neighborhood to live; and city planners make decisions.  "
       ]
     },
     {
@@ -84,7 +84,7 @@
         "colab_type": "text"
       },
       "source": [
-        "We approach these problems in the following way. First of all, we collect data that characterize neighborhoods. Then, we use exploratory analysis to gain some initial insights from the data. After that, we make cluster analysis on neighboods. Finally, we discuss our findings and propose next steps for this analysis.  "
+        "We approach these problems in the following way. First of all, we collect data that characterize neighborhoods. Then, we use exploratory analysis to gain some initial insights from the data. After that, we make cluster analysis on neighborhoods. Finally, we discuss our findings and propose next steps for this analysis.  "
       ]
     },
     {
@@ -100,11 +100,11 @@
         "- Geospatial data of neighborhoods in Zurich. \n",
         "We can obtain this dataset (GEOJSON) from the [Geodata Portal of Zurich](https://www.stadt-zuerich.ch/geodaten/download/Statistische_Quartiere)\n",
         "\n",
-        "- Venue data from Foursquare by category (e.g. restaruants, bars & clubs, cultural spots, offices, train stations).   \n",
+        "- Venue data from Foursquare by category (e.g. restaurants, bars & clubs, cultural spots, offices, train stations).   \n",
         "There is limitation of 50 venues per API all. In order to retrieve all venues in the city of Zurich, we deployed a recursive searching algorithm to avoid breaching the number of API call limit on Foursquare. \n",
         "\n",
         "- [Open Data Portal of Zurich Tourism](https://zt.zuerich.com/en/open-data) also provide location data for venues of different categories.   \n",
-        "We compared Zurich Tourism data with Fourssquare data and decided not to use only Foursquare data due to the fact that Foursquare data contain more venues and categories. "
+        "We compared Zurich Tourism data with Foursquare data and decided not to use only Foursquare data due to the fact that Foursquare data contain more venues and categories. "
       ]
     },
     {
@@ -307,7 +307,7 @@
         "However, we need to acknowledge limitations in this study:\n",
         "- The choice of venue categories was limited to the accuracy and completeness of Foursquare data in Zurich. Crowd-sourced data might have smaller coverage for certain categories (e.g. offices) compared to others (e.g. restaurants). Using Google Map data might solve this issue.   \n",
         "\n",
-        "- We used abosulote number of venues as features in this analysis. Venue density with regards to area size or population of neighborhoods might describe better the 'feeling' of a district. \n",
+        "- We used absulote number of venues as features in this analysis. Venue density with regards to area size or population of neighborhoods might describe better the 'feeling' of a district. \n",
         "\n",
         "- We limited our study to the official 34 administrative neighborhoods for simplicity. In fact, the analysis could be easily extended to much smaller grids or or blocks. "
       ]
@@ -329,8 +329,21 @@
         "colab_type": "text"
       },
       "source": [
-        "In this study, we analyzed the characteristics of neighborhoods in Zurich based on venue data from Foursquare. We identified the numbers of restaurants, cafés, arts and entertainment venues, tram and bus stops, bar and clubs, markets, and offices as features for neighborhoods. We split the 34 neighborhoods into 5 groups based on a cluster analysis. Neighborhoods within one group share common characteristics. We discussed how tourists, residences and city adminstrators can potentially benefit from the results of this analyses. We acknowledged the limitations of this study and proposed areas of improvements. For example, we can replace Foursquare data with Google Map data; include population or area size data to calculate venue density; and extend the study from 34 adminstrative neighborhoods to a larger number of smaller blocks. "
+        "In this study, we analyzed the characteristics of neighborhoods in Zurich based on venue data from Foursquare. We identified the numbers of restaurants, cafés, arts and entertainment venues, tram and bus stops, bar and clubs, markets, and offices as features for neighborhoods. We split the 34 neighborhoods into 5 groups based on a cluster analysis. Neighborhoods within one group share common characteristics. We discussed how tourists, residences and city administrators can potentially benefit from the results of this analyses. We acknowledged the limitations of this study and proposed areas of improvements. For example, we can replace Foursquare data with Google Map data; include population or area size data to calculate venue density; and extend the study from 34 administrative neighborhoods to a larger number of smaller blocks. "
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_ITUWgQ0NQA_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
